Changelog

2013/10/03
	Changes:
		- Set up repo, changelog and diary.
		- Created perl2python.pl

2013/10/04
	Changes:
		- Implemented input of data to a single string format

2013/10/05
	Changes:
		- Added a regex command to split the code string by semicolons, curly brackets and comments
		- Code for removing semicolons, swapping curly brackets out added 
		- Python flow control (conversion from curly brackets to indentation) handled (note - will conflict with hashes)

2013/10/08
	Changes:
		- Handled variable basics - removing dollar signs
		- Still does not handle reserved characters in strange places (e.g. $ ; {} in strings or regex statements)
		- Turns strings with variables inside them into a python readable form (doesn't handle . concat at the moment)
		- Converts ++ and -- to a python usable format (+=1 and -=1)

2013/10/09
	Changes:
		- Standardised in-line function display
		- Handled "last" and detected "print" functions
		- If, else, elif and while working
		

	High Priority To-Do:
		- For and foreach loops - may need special handling for for loops in an additional regex to locate them
		- Ensure all of subsets 0 and 1 are working correctly
		- Handle if, for and while loops
		- Handle function nesting

	Low Priority To-Do:
		- Handle python imports
		- Recognise hashes in initial parsing (lack of semi-colons?)
		- Rewrite parser yourself

	Current problems:
		- Handling semicolons, curly brackets, logical operators inside strings and regex expressions